[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/port.png" type="Texture" id=1]
[ext_resource path="res://Resources/s_Centipede_3.png" type="Texture" id=2]
[ext_resource path="res://Resources/JoystickLeft.png" type="Texture" id=4]
[ext_resource path="res://Resources/JoystickRight.png" type="Texture" id=5]
[ext_resource path="res://Resources/bugjam background.png" type="Texture" id=6]
[ext_resource path="res://Resources/JoystickUpright.png" type="Texture" id=7]
[ext_resource path="res://CabinetFront.gd" type="Script" id=8]
[ext_resource path="res://ClassInputPort.gd" type="Script" id=9]
[ext_resource path="res://ClassOutputPort.gd" type="Script" id=10]
[ext_resource path="res://ClassWire.gd" type="Script" id=11]
[ext_resource path="res://ClassPort.gd" type="Script" id=12]
[ext_resource path="res://Joystick.gd" type="Script" id=13]
[ext_resource path="res://Resources/cab background proto.png" type="Texture" id=14]
[ext_resource path="res://Red Button Sprite.gd" type="Script" id=15]
[ext_resource path="res://Red Button Control.gd" type="Script" id=16]
[ext_resource path="res://Resources/Button_Red_Spritesheet.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="InputEventKey" id=4]
scancode = 32

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ArcadeGame" type="Node2D"]
script = ExtResource( 8 )

[node name="The Gamer Scene" type="Node2D" parent="."]
position = Vector2( 656, 0 )

[node name="Cabinet Background" type="Sprite" parent="The Gamer Scene"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false

[node name="Subgame Screen" type="Node2D" parent="The Gamer Scene"]

[node name="Not Centipede" type="Sprite" parent="The Gamer Scene/Subgame Screen"]
position = Vector2( 63.968, 217.41 )
scale = Vector2( 0.775315, 0.794849 )
texture = ExtResource( 2 )
centered = false

[node name="Controllers" type="Node2D" parent="The Gamer Scene"]

[node name="Joystick" type="Node2D" parent="The Gamer Scene/Controllers"]
script = ExtResource( 13 )

[node name="JoystickSprite" type="AnimatedSprite" parent="The Gamer Scene/Controllers/Joystick"]
position = Vector2( 118.66, 628.262 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
playing = true

[node name="Red Button" type="Node2D" parent="The Gamer Scene/Controllers"]
position = Vector2( 345, 629 )

[node name="Red_Button_Control" type="Button" parent="The Gamer Scene/Controllers/Red Button"]
margin_right = 55.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
action_mode = 0
shortcut = SubResource( 5 )
align = 0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red Button Sprite" type="Sprite" parent="The Gamer Scene/Controllers/Red Button"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 17 )
centered = false
vframes = 2
frame = 1
script = ExtResource( 15 )

[node name="The Fixer Scene" type="Node2D" parent="."]

[node name="Cabinet Background" type="AnimatedSprite" parent="The Fixer Scene"]
position = Vector2( 329, 360 )
frames = SubResource( 3 )

[node name="Wires" type="Node2D" parent="The Fixer Scene"]
script = ExtResource( 11 )

[node name="The Circuit Board" type="Node2D" parent="The Fixer Scene"]

[node name="Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board"]
script = ExtResource( 12 )

[node name="Input-only Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board/Ports"]
script = ExtResource( 9 )

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/Ports/Input-only Ports"]
visible = false
position = Vector2( 51.5, 162.5 )
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 1 )

[node name="Output-only Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board/Ports"]
script = ExtResource( 10 )

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/Ports/Output-only Ports"]
visible = false
position = Vector2( 593, 166 )
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 1 )
flip_h = true

[node name="IO Ports" type="Node2D" parent="The Fixer Scene/The Circuit Board/Ports"]

[node name="Controller Inputs" type="Node2D" parent="The Fixer Scene/The Circuit Board"]

[node name="Red Button Input" type="Node" parent="The Fixer Scene/The Circuit Board/Controller Inputs"]
script = ExtResource( 9 )
portName = "RED"

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input"]
position = Vector2( 66.0001, 181 )
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 1 )

[node name="OutputToGame" type="Node2D" parent="The Fixer Scene/The Circuit Board"]

[node name="OutputPortDebug" type="Node" parent="The Fixer Scene/The Circuit Board/OutputToGame"]
script = ExtResource( 10 )
portName = "DEBUG"
initialInputNodePath = "/root/ArcadeGame/The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input"

[node name="PortSprite" type="Sprite" parent="The Fixer Scene/The Circuit Board/OutputToGame/OutputPortDebug"]
position = Vector2( 593, 166 )
scale = Vector2( 0.640625, 0.609375 )
texture = ExtResource( 1 )
flip_h = true

[node name="DebugLabel" type="Label" parent="."]
margin_left = 580.0
margin_top = 129.0
margin_right = 620.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red_Button_Control" method="_on_Red_Button_Control_button_down"]
[connection signal="button_down" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red Button Sprite" method="_on_Red_Button_Control_button_down"]
[connection signal="button_down" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input" method="_on_Button_button_down"]
[connection signal="button_up" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red_Button_Control" method="_on_Red_Button_Control_button_up"]
[connection signal="button_up" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Gamer Scene/Controllers/Red Button/Red Button Sprite" method="_on_Red_Button_Control_button_up"]
[connection signal="button_up" from="The Gamer Scene/Controllers/Red Button/Red_Button_Control" to="The Fixer Scene/The Circuit Board/Controller Inputs/Red Button Input" method="_on_Button_button_up"]
